; ModuleID = '/home/carl/AnghaBench/micropython/extmod/uzlib/extr_tinflate.c_tinf_get_le_uint32.c'
source_filename = "/home/carl/AnghaBench/micropython/extmod/uzlib/extr_tinflate.c_tinf_get_le_uint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tinf_get_le_uint32(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 4, i32* %4, align 4
  br label %5

5:                                                ; preds = %9, %1
  %6 = load i32, i32* %4, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* %4, align 4
  %8 = icmp ne i32 %6, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %5
  %10 = load i32, i32* %3, align 4
  %11 = ashr i32 %10, 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i64 @uzlib_get_byte(i32* %12)
  %14 = trunc i64 %13 to i32
  %15 = shl i32 %14, 24
  %16 = or i32 %11, %15
  store i32 %16, i32* %3, align 4
  br label %5

17:                                               ; preds = %5
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @uzlib_get_byte(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
